fix jumpy number display issue

--- a/main.css
+++ b/main.css
@@ -79,4 +79,7 @@ body {
   font-family: 'Oswald', sans-serif;
   font-size: 3.4rem;
   font-variant-numeric: tabular-nums;
+  /* HACK align by left, so that numbers don't jump around */
+  text-align: left;
+  padding-left: 6.4rem;
 }
